# mediatagtools

./: AUTHOR  CMakeLists.txt  Changelog  Doxyfile  FindTaglib.cmake  INSTALL  Makefile  NOTES  TODO  conf.pri  configure  install  make2008.bat  mediatagtools.desktop  mediatagtools.kdevelop  mediatagtools.kdevelop.pcs  mediatagtools.kdevses  mediatagtools.pro
scripts/: armageddon.sh  config.sh  mkpackage.sh  mkrevision.sh  version.sh
src/: CMakeLists.txt  about.ui  alistviewitem.cpp  alistviewitem.h  form1.ui  form2.ui  genres.h  mainform.ui  mediafile.cpp  mediafile.h  mediatagtools.cpp  modeltest.h  mp3extraframes.h  mttaboutdialog.cpp  mttaboutdialog.h  mttadvtagdelegate.cpp  mttadvtagdelegate.h  mttcfdialog.cpp  mttcfdialog.h  mttfile.cpp  mttfile.h  mttitemdelegate.cpp  mttitemdelegate.h  mttmainwin.cpp  mttmainwin.h  mttres.qrc  mtttablewidget.cpp  mtttablewidget.h  mtttreeview.cpp  mtttreeview.h  qclineedit.cpp  qclineedit.h  qdndlistview.cpp  qdndlistview.h  renummodel.cpp  renummodel.h  src.pro  tools.h  treeitem.cpp  treeitem.h  (+3 more)
src/forms/: about.ui
translations/: mtt_el.ts
